--- a/Sukhdari_Client/wwwroot/appsettings.json
+++ b/Sukhdari_Client/wwwroot/appsettings.json
@@ -1,4 +1,5 @@
 {
-  "BaseApiUrl": "https://localhost:44353/"
-  //"BaseApiUrl": "https://sukhdariupdateapi.azurewebsites.net/"
+    "BaseApiUrl": "https://localhost:44353/",
+    "AppBasePath": "https://localhost:44401/",
+    "ServerBasePath": "https://localhost:44330/"
 }
