set the applicaton url

--- a/Sukhdari_Server/appsettings.json
+++ b/Sukhdari_Server/appsettings.json
@@ -15,7 +15,7 @@
         }
     },
     "AllowedHosts": "*",
-    "ServerUrl": "https://localhost:44330/"
+    "ServerUrl": "http://63.250.53.44:82/"
         //"ServerUrl": "https://sukhdariserverupdate.azurewebsites.net/"
 
 }
