--- a/Sukhdari_Client/Sukhdari_Client.csproj
+++ b/Sukhdari_Client/Sukhdari_Client.csproj
@@ -7,9 +7,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.4" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.6" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
+
   </ItemGroup>
 
   <ItemGroup>
@@ -22,19 +24,4 @@
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <BlazorWebAssemblyLazyLoad Include="Microsoft.EntityFrameworkCore.Relational.dll" />
-    <BlazorWebAssemblyLazyLoad Include="System.Private.Xml.dll" />
-    <BlazorWebAssemblyLazyLoad Include="System.Text.Encoding.CodePages.dll" />
-    <BlazorWebAssemblyLazyLoad Include="Microsoft.EntityFrameworkCore.dll" />
-    <BlazorWebAssemblyLazyLoad Include="Microsoft.Identity.Client.dll" />
-    <BlazorWebAssemblyLazyLoad Include="System.Data.Common.dll" />
-    <BlazorWebAssemblyLazyLoad Include="Microsoft.IdentityModel.Tokens.dll" />
-    <BlazorWebAssemblyLazyLoad Include="System.Private.DataContractSerialization.dll" />
-    <BlazorWebAssemblyLazyLoad Include="Newtonsoft.Json.dll" />
-    <BlazorWebAssemblyLazyLoad Include="System.Linq.Expressions.dll" />
-    <BlazorWebAssemblyLazyLoad Include="Microsoft.EntityFrameworkCore.SqlServer.dll" />
-    <BlazorWebAssemblyLazyLoad Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore.dll" />
-  
-  </ItemGroup>
 </Project>
