--- a/Sukhdari_Client/wwwroot/appsettings.json
+++ b/Sukhdari_Client/wwwroot/appsettings.json
@@ -1,5 +1,5 @@
 {
-    "BaseApiUrl": "https://localhost:44353/",
-    "AppBasePath": "https://localhost:44401/",
-    "ServerBasePath": "https://localhost:44330/"
+    "BaseApiUrl": "http://63.250.53.44:81/",
+    "AppBasePath": "http://63.250.53.44/MyApp/",
+    "ServerBasePath": "http://63.250.53.44:82/"
 }
