--- a/Sukhdari_Api/appsettings.json
+++ b/Sukhdari_Api/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     //"DefaultConnection": "Server=63.250.53.44;Database=SukhdariDB;User Id=sukhdari;Password=sukh@123456",
     //"DefaultConnection": "Data Source=sukhdari-apidbserver.database.windows.net;Initial Catalog=Sukhdari_Api_db;User ID=SukhdariAdmin;Password=Sukhdari123@;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
-    //"DefaultConnection": "Server=66.165.248.146\\MSSQLSERVER2016;Database=SukhdariDB;User Id=Sukhdari;Password=SukhProj123@",
+    //"DefaultConnection": "Server=66.165.248.146\\MSSQLSERVER2016;Database=SukhdariDB;User Id=Sukhdari;Password=SukhProj123@; TrustServerCertificate=True",
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB; Database=Sukhdari; Trusted_Connection=True",
     "AyinConnection": "Server=ROZI\\SQLEXPRESS;Database=Sukhdari;Trusted_Connection=True;MultipleActiveResultSets=true",
     "AbdullahConnection": "Server=DESKTOP-QNEE0EJ\\HAMZA;Database=Sukhdari;Trusted_Connection=True;MultipleActiveResultSets=true",
