Upgraded to .Net8 and fix bugs

--- a/Sukhdari_Server/appsettings.json
+++ b/Sukhdari_Server/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "Server=63.250.53.44;Database=SukhdariDB;User Id=sukhdari;Password=sukh@123456",
-    //"DefaultConnection": "Server=66.165.248.146\\MSSQLSERVER2016;Database=SukhdariDB;User Id=Sukhdari;Password=SukhProj123@",
+    //"DefaultConnection": "Server=66.165.248.146\\MSSQLSERVER2016;Database=SukhdariDB;User Id=Sukhdari;Password=SukhProj123@; TrustServerCertificate=True",
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB; Database=Sukhdari; Trusted_Connection=True",
     "AyinConnection": "Server=ROZI\\SQLEXPRESS;Database=Sukhdari;Trusted_Connection=True;MultipleActiveResultSets=true",
     "AbdullahConnection": "Server=DESKTOP-QNEE0EJ\\HAMZA;Database=Sukhdari;Trusted_Connection=True;MultipleActiveResultSets=true",
