--- a/Sukhdari_Server/Sukhdari_Server.csproj
+++ b/Sukhdari_Server/Sukhdari_Server.csproj
@@ -1,56 +1,43 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <OutputType>WinExe</OutputType>
   </PropertyGroup>
-
   <ItemGroup>
     <Content Remove="Shared\DeleteConfirmationComponent.razor" />
   </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="11.0.1" />
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
-    <PackageReference Include="CsvHelper" Version="27.2.1" />
-    <PackageReference Include="Microsoft.AspNetCore.HttpOverrides" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.4" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.4">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.3" />
-    <PackageReference Include="MudBlazor" Version="6.0.10" />
-    <PackageReference Include="Radzen.Blazor" Version="3.18.12" />
-    <PackageReference Include="Syncfusion.Blazor.Buttons" Version="20.1.0.59" />
-    <PackageReference Include="Syncfusion.Blazor.SplitButtons" Version="20.1.0.59" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="20.1.0.59" />
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="CsvHelper" Version="30.0.1" />
+    <PackageReference Include="MudBlazor" Version="6.11.0" />
+    <PackageReference Include="Radzen.Blazor" Version="4.21.3" />
+    <PackageReference Include="Syncfusion.Blazor.Buttons" Version="23.2.4" />
+    <PackageReference Include="Syncfusion.Blazor.SplitButtons" Version="23.2.4" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="23.2.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Business\Business.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <UpToDateCheckInput Remove="Shared\DeleteConfirmationComponent.razor" />
   </ItemGroup>
-
   <ItemGroup>
     <_ContentIncludedByDefault Remove="Shared\DeleteConfirmationComponent.razor" />
   </ItemGroup>
-
   <ItemGroup>
     <None Include="Pages\Store\DeleteConfirmationComponent.razor" />
   </ItemGroup>
-
   <ItemGroup>
     <Folder Include="wwwroot\Format\" />
     <Folder Include="wwwroot\ProductImages\" />
   </ItemGroup>
-
 </Project>
