--- a/Sukhdari_Client/Sukhdari_Client.csproj
+++ b/Sukhdari_Client/Sukhdari_Client.csproj
@@ -22,6 +22,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Syncfusion.Blazor.Buttons" Version="23.2.6" />
+    <PackageReference Include="Syncfusion.Blazor.Popups" Version="23.2.6" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="23.2.6" />
     <PackageReference Include="System.Net.Http.Json" Version="8.0.0" />
   </ItemGroup>
 </Project>
