--- a/Sukhdari_Client/Sukhdari_Client.csproj
+++ b/Sukhdari_Client/Sukhdari_Client.csproj
@@ -17,6 +17,7 @@
     <BlazorWebAssemblyLazyLoad Include="System.Linq.Expressions.wasm" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Blazored.LocalStorage" Version="4.4.0" />
     <PackageReference Include="CurrieTechnologies.Razor.SweetAlert2" Version="5.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.0" />
