--- a/Sukhdari_Server/Sukhdari_Server.csproj
+++ b/Sukhdari_Server/Sukhdari_Server.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="MudBlazor" Version="6.11.0" />
     <PackageReference Include="Radzen.Blazor" Version="4.21.3" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
     <PackageReference Include="Syncfusion.Blazor.Buttons" Version="23.2.4" />
     <PackageReference Include="Syncfusion.Blazor.SplitButtons" Version="23.2.4" />
     <PackageReference Include="Syncfusion.Blazor.Themes" Version="23.2.4" />
