--- a/Sukhdari_Server/appsettings.json
+++ b/Sukhdari_Server/appsettings.json
@@ -19,6 +19,6 @@
   "AllowedHosts": "*",
   "ServerUrl": "https://localhost:44330/"
   //"ServerUrl": "https://sukhdariserverproject.azurewebsites.net/"
-  //"ServerUrl": "http://server.powerlatics.com/"
+  //"ServerUrl": "https://server.powerlatics.com/"
 
 }
