Added new hosting data (Aazam Cloth Market)
Improved Search on client side

--- a/Sukhdari_Client/wwwroot/appsettings.json
+++ b/Sukhdari_Client/wwwroot/appsettings.json
@@ -2,12 +2,15 @@
   "BaseApiUrl": "https://localhost:44353/",
   //"BaseApiUrl": "https://sukhdariapiproject.azurewebsites.net",
   //"BaseApiUrl": "https://api.powerlatics.com",
+  //"BaseApiUrl": "https://api.aazamclothmarket.com",
 
   "AppBasePath": "https://localhost:44378/",
   //"AppBasePath": "https://sukhdariclientproject.azurewebsites.net/",
   //"AppBasePath": "https://market.powerlatics.com/",
+  //"AppBasePath": "https://aazamclothmarket.com/",
 
   "ServerBasePath": "https://localhost:44330/"
   //"ServerBasePath": "https://sukhdariserverproject.azurewebsites.net/",
-  //"ServerBasePath": "https://server.powerlatics.com/"
+  //"ServerBasePath": "https://server.powerlatics.com/",
+  //"ServerBasePath": "https://server.aazamclothmarket.com/"
 }
