--- a/Sukhdari_Server/appsettings.json
+++ b/Sukhdari_Server/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     //"DefaultConnection": "Server=63.250.53.44;Database=SukhdariDB;User Id=sukhdari;Password=sukh@123456",
     //"DefaultConnection": "Server=66.165.248.146\\MSSQLSERVER2016;Database=SukhdariDB;User Id=Sukhdari;Password=SukhProj123@; TrustServerCertificate=True",
+    //"DefaultConnection": "Server=66.165.248.146\\MSSQLSERVER2016;Database=AzamClothMarketDB;User Id=AzamClothMarket;Password=LocalMarketOnline123@; TrustServerCertificate=True",
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB; Database=Sukhdari; Trusted_Connection=True",
     "AyinConnection": "Server=ROZI\\SQLEXPRESS;Database=Sukhdari;Trusted_Connection=True;MultipleActiveResultSets=true",
     "AbdullahConnection": "Server=DESKTOP-QNEE0EJ\\HAMZA;Database=Sukhdari;Trusted_Connection=True;MultipleActiveResultSets=true",
@@ -20,5 +21,6 @@
   "ServerUrl": "https://localhost:44330/"
   //"ServerUrl": "https://sukhdariserverproject.azurewebsites.net/"
   //"ServerUrl": "https://server.powerlatics.com/"
+  //"ServerUrl": "https://server.aazamclothmarket.com/"
 
 }
