--- a/Sukhdari_Api/appsettings.json
+++ b/Sukhdari_Api/appsettings.json
@@ -4,6 +4,7 @@
     //"DefaultConnection": "Data Source=sukhdari-apidbserver.database.windows.net;Initial Catalog=Sukhdari_Api_db;User ID=SukhdariAdmin;Password=Sukhdari123@;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
     //"DefaultConnection": "Server=66.165.248.146\\MSSQLSERVER2016;Database=SukhdariDB;User Id=Sukhdari;Password=SukhProj123@; TrustServerCertificate=True",
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB; Database=Sukhdari; Trusted_Connection=True",
+    //"DefaultConnection": "Server=66.165.248.146\\MSSQLSERVER2016;Database=AzamClothMarketDB;User Id=AzamClothMarket;Password=LocalMarketOnline123@; TrustServerCertificate=True",
     "AyinConnection": "Server=ROZI\\SQLEXPRESS;Database=Sukhdari;Trusted_Connection=True;MultipleActiveResultSets=true",
     "AbdullahConnection": "Server=DESKTOP-QNEE0EJ\\HAMZA;Database=Sukhdari;Trusted_Connection=True;MultipleActiveResultSets=true",
     "NehaConnection": "Server=NEHAIMRAN;Database=Sukhdari;Trusted_Connection=True;MultipleActiveResultSets=true",
