Improvements are made

--- a/Sukhdari_Client/wwwroot/appsettings.json
+++ b/Sukhdari_Client/wwwroot/appsettings.json
@@ -9,7 +9,7 @@
   //"AppBasePath": "https://market.powerlatics.com/",
   //"AppBasePath": "https://aazamclothmarket.com/",
 
-  "ServerBasePath": "https://localhost:44330/"
+  "ServerBasePath": "https://localhost:44330/",
   //"ServerBasePath": "https://sukhdariserverproject.azurewebsites.net/",
   //"ServerBasePath": "https://server.powerlatics.com/",
   //"ServerBasePath": "https://server.aazamclothmarket.com/"
